--- a/api/package.json
+++ b/api/package.json
@@ -11,7 +11,12 @@
   "author": "Roberto Spinelli",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^5.2.0"
+    "chalk": "^5.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "helmet": "^6.0.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "ts-node": "^10.9.1",
