--- a/api/package.json
+++ b/api/package.json
@@ -11,17 +11,19 @@
   "author": "Roberto Spinelli",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^5.2.0",
+    "chalk": "4.1.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "helmet": "^6.0.1",
+    "mongoose": "^6.9.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.4",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0"
